refactoring with lombok